--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,9 @@ packages = [{include = "weather_api"}]
 [tool.poetry.dependencies]
 python = "^3.9"
 fastapi = "^0.88.0"
-rq = "^1.11.1"
-requests = "^2.28.1"
 pony = "^0.7.16"
-psycopg2 = "^2.9.5"
+psycopg2-binary = "^2.9.5"
+aiohttp-retry = "^2.8.3"
 
 
 [build-system]
