--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ python = "^3.9"
 fastapi = "^0.88.0"
 pony = "^0.7.16"
 psycopg2-binary = "^2.9.5"
-aiohttp-retry = "^2.8.3"
+requests = "^2.28.1"
 
 
 [build-system]
